--- a/index.html
+++ b/index.html
@@ -222,34 +222,29 @@
     <section class="card" role="group" aria-label="Pregunta San Valentín">
       <div class="badge"><span class="dot"></span> Mensaje importante</div>
 
-      <h1 id="title">Oye, mi noia… 💗</h1>
+      <h1 id="title">¿Quieres ser mi San Valentín?💗</h1>
       <p id="subtitle">
-        Te tengo una pregunta pequeñita pero con sentimientos gigantes:
-        <strong>¿quieres ser mi San Valentín?</strong>
+        Te amo demasiado :D
+        <strong></strong>
       </p>
 
       <div class="buttons">
-        <button id="yesBtn" type="button">Sí, obvio 💘</button>
+        <button id="yesBtn" type="button">Sí💘</button>
         <button id="noBtn" type="button" aria-label="No (no disponible)">No 🙃</button>
       </div>
 
       <div class="hint" id="hint">Pista: el “No” está en modo tímido hoy.</div>
 
-      <div class="footer">
-        <div>Hecho con amor y cero posibilidades de rechazo.</div>
-        <div><code>Tip:</code> Ábrelo en el cel y toca el “No”.</div>
-      </div>
     </section>
   </main>
 
   <div class="modal" id="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
     <div class="modal-card">
-      <h2 id="modalTitle">¡Siiiii! 💞</h2>
+      <h2 id="modalTitle">Te amo mi amor 💞</h2>
       <p id="modalText">
-        Sabía que mi noia diría que sí. Prometo darte muchos abracitos, besitos y un día hermoso contigo.
+        Espero pasar este contigo este día el resto de nuestras vidas. Gracias por ser tan increíble y hacerme tan feliz.
       </p>
       <div class="row">
-        <button class="ghost" id="copyBtn" type="button">Copiar mensaje</button>
         <button id="closeBtn" type="button">Cerrar 💗</button>
       </div>
     </div>
